syntax = "proto3";

option csharp_namespace = "MeterReader.gRPC";

import "google/protobuf/timestamp.proto";

service MeterService {
	rpc AddMeter (MeterPacket) returns (MeterResponse); 
}

message MeterPacket {
	repeated MeterRequest Data = 1;
	MeterStatus Status = 2;	
}

message MeterRequest {
	int32 CustomerId = 1;
	int32 Value = 2;
	string Notes = 3; 
	google.protobuf.Timestamp ReadingDate = 5;
	reserved 4;
	reserved 'Success';
}

message MeterResponse {
	MeterStatus Status = 1;	
	string Message = 2;
}

enum MeterStatus {
	UNKNOWN = 0;
	SUCCESS = 1;
	FAIL = 2;
}